--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,13 +1,17 @@
 html
 	head
+		meta(charset="UTF-8")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		meta(name="theme-color", content="#2196F3")
+		meta(name="apple-mobile-web-app-status-bar-style", content="#2196F3")
 		title Twitch API
 		link(href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css')
 		link(href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css')
-		link(href='/index.css' rel='stylesheet')
+		link(href='./index.css' rel='stylesheet')
 		body
 			#container
 			#container-second
-	script(type='text/javascript' src='/bower_components/react/react-with-addons.js')
-	script(type='text/javascript' src='/bower_components/react/react-dom.min.js')
-	script(type='text/javascript' src='/bower_components/jquery/dist/jquery.js')
-	script(type='text/javascript' src='/scripts.js')
+	script(type='text/javascript' src='./bower_components/react/react-with-addons.js')
+	script(type='text/javascript' src='./bower_components/react/react-dom.min.js')
+	script(type='text/javascript' src='./bower_components/jquery/dist/jquery.js')
+	script(type='text/javascript' src='./scripts.js')
