Added removing cards functionality

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -120,6 +120,7 @@ a
 	right: 10
 	top: 20
 	cursor: pointer
+	outline: none
 
 #cards-inside
 	margin-top: 135px
@@ -147,6 +148,10 @@ a
 
 	p
 		padding-left: 10px
+
+	.cross
+		color: white
+
 input
 	width: 100%
 	padding: 15px
@@ -167,7 +172,7 @@ input
 
 .example-leave.example-leave-active
 	opacity: 0.01
-	transition: opacity 300ms ease-in
+	transition: all 450ms ease-in
 
 @media(max-width: 1500px)
 	#container, header, #container-second
@@ -252,4 +257,4 @@ input
 		margin-top: 25px
 
 	#cards-inside
-		margin-top: 25px	
+		margin-top: 25px
